--- a/utils/apollo/.graphqlconfig
+++ b/utils/apollo/.graphqlconfig
@@ -4,7 +4,7 @@
   "extensions": {
     "endpoints": {
       "PancakeSwap Exchange LITE": {
-        "url": "https://api.bscgraph.org/subgraphs/name/pancakeswap/exchange-lite",
+        "url": "https://bsc.streamingfast.io/subgraphs/name/pancakeswap/exchange-v2",
         "headers": {
           "user-agent": "JS GraphQL"
         },
